<resources>
    <string name="app_name">CovidApp</string>
    <string name="required_fields">All fields are required</string>
    <string name="required_length_password">Password must be longer than 8 characters</string>
    <string name="register_error">You can not register with this email or password</string>
    <string name="login_error">Authentication failed</string>
    <string name="login">Login</string>
    <string name="register">register as patient</string>
    <string name="create_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_message">Type a message…</string>
    <string name="empty_message">You can not send empty message</string>
    <string name="profile">Profile</string>
    <string name="search">Search…</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="your_email">Your email</string>
    <string name="reset">Reset</string>
    <string name="clicking_reset_password">By clicking RESET, you will receive an email to reset your password</string>
    <string name="pesel">PESEL</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="diagnose">Please answer the following questions for diagnosis</string>
    <string name="question1">Do you have a fever?</string>
    <string name="question2">Do you have a dry cough?</string>
    <string name="question3">Are you tired?</string>
    <string name="question4">Do you feel sputum when coughing?</string>
    <string name="question5">Do you have shortness of breath?</string>
    <string name="question6">Do you have muscle aches?</string>
    <string name="question7">Do you have sore throat?</string>
    <string name="question8">Do you have unusual headache?</string>
    <string name="question9">Do you have chills?</string>
    <string name="question10">Do you have diarrhoea?</string>
    <string name="answer">Answer</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="take_patient">Are you sure you want to help this patient?</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="number_range">Numbers should be between 1 and 5</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_sure">Not sure</string>
    <string name="message1">Your symptoms are not serious, but you should stay at home and monitor health.</string>
    <string name="message2">Your symptoms are worrying. You should stay at home and contact with doctor if symptoms will not let up within few days.</string>
    <string name="message3">Your symptoms are really serious. You should contact with doctor as fast as it is possible!</string>
    <string name="contact_with_doctor">Contact with doctor</string>
    <string name="back_to_main">Back</string>
    <string name="wait_for_doctor">Your report has been sent to the doctor. As soon as you receive a reply, it will appear in the CHATS tab.  Usually it takes a few hours.</string>
    <string name="value">value</string>
    <string name="edit">Edit</string>
    <string name="pesel_error">PESEL checksum error!</string>
    <string name="required_length">Name and surname should be longer than 3 characters</string>
    <string name="email_error">Email should be longer than 4 characters and contains @</string>
    <string name="phone_error">Phone number should contain 9 numbers</string>
    <string name="register_as_doctor">Register as doctor</string>
    <string name="back">Back</string>
    <string name="show_answers">Show answers</string>
    <string name="save">Save</string>
</resources>